// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attaches a ref to a child 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    numberOfLines={3}
    style={
      {
        "color": "blue",
      }
    }
  />
</View>
`;

exports[`creates a styled component with a child 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <Text
    style={
      {
        "color": "blue",
      }
    }
  >
    Press me
  </Text>
</View>
`;

exports[`creates a styled component with a child with custom props 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    numberOfLines={3}
    style={
      {
        "color": "blue",
      }
    }
  >
    Hello World!
  </Text>
</View>
`;

exports[`creates a styled component with a child with dynamic custom props 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    numberOfLines={3}
    style={
      {
        "color": "blue",
      }
    }
  >
    Hello World!
  </Text>
</View>
`;

exports[`creates a styled component with a child with dynamic custom props 2`] = `
<View
  onLiner={true}
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      {
        "color": "blue",
      }
    }
  >
    Hello World!
  </Text>
</View>
`;
